# ProjectTemplate-cherno

./: .gitignore  Build.lua  CLION_FINAL_STEPS.md  CLION_SETUP.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_GUIDE.md  README.md
App/: Build-App.lua  CMakeLists.txt
App/Source/: App.cpp
Core/: Build-Core.lua  CMakeLists.txt
Core/Source/Core/: Core.cpp  Core.h
Scripts/: Setup-CLion.sh  Setup-VSCode.sh  Setup-macOS-Intel.sh  Setup-macOS-Makefile.sh  Setup-macOS.sh
Trie/: Build-Trie.lua  CMakeLists.txt
Trie/Source/Trie/: Trie.cpp  Trie.h
